# installer

./: AUTHORS  LICENSE  Makefile.am  README.md  autogen.sh  configure.in
data/: Makefile.am  account_ui.glade  blacklist  installer_ui.glade  localetzone_ui.glade  osinstaller.desktop.in.in  parted_man.glade
data/html/: index.html
data/html/images/: style.css
gtkrc/: Makefile.am  gtkrc
icons/: Makefile.am
po/: POTFILES  POTFILES.in  zh_CN.po  zh_HK.po  zh_TW.po
src/: BGwidget.py  Makefile.am  OSInstaller  __init__.py  accountmod.py  clean_root  copyfilemod.py  installerenv.py  installerenv.py.in  installscript.py  keyboard_names.py  labelcontexts.py  layoutwidget.py  localetzonemap.py  localetzonemod.py  mainframemod.py  misc.py  osdata.py  osinstaller  osprober  partmod.py  post_install  pre_install  preconfig.example  resize4fat.c  testparted.py  tzone.py
src/jscript/: Makefile.am  js_extend.c  js_extend.h  jsosinstaller.c  jsosinstaller.h
