
gtkrcdir=$(pkgdatadir)/gtkrc

gtkrc_DATA = gtkrc							\
			 bottom_bg.png 					\
			 install_info_pad_bg.png		\
			 install_progress_button_insensitive.png 	\
			 install_progress_button_normal.png			\
			 install_progress_button_prelight.png		\
			 install_progress_button_press.png			\
			 main_pixmap_bg.png							\
			 progressbar_bar.png						\
			 progressbar_bg.png							\
			 titlebar_bg.png							\
			 layout_widget_tip_box_gap.png				\
			 layout_widget_bg.png						\
			 main_button_normal.png						\
			 main_button_prelight.png					\
			 main_button_pressed.png					\
			 main_button_insensitive.png				\
			 combo_box_insensitive.png					\
			 combo_box_normal.png						\
			 combo_box_prelight.png						\
			 combo_box_pressed.png						\
			 button_focus.png							\
			 vline.png									\
			 entry_bg.png								\
			 entry_shadow.png							\
			 frame.png									\
			 restart_later_normal.png					\
			 restart_later_prelight.png					\
			 restart_later_press.png					\
			 installing_bg.png							\
			 $(NULL)
